--- a/data/sites/conf.local.example
+++ b/data/sites/conf.local.example
@@ -2,6 +2,8 @@
 # This is particularly useful for users with several configs for
 # different virtual servers, who want to reuse common parameters.
 # Also, this file is not updated with each new upstream release.
+Include "/etc/awstats/awstats.conf"
+
 DirIcons="/icons"
 LogFormat = 1
 #DNSLookup=0
