--- a/data/sites/mysite.conf.example
+++ b/data/sites/mysite.conf.example
@@ -1,5 +1,7 @@
 Include "/etc/awstats/awstats.conf.local"
 
-#OnlyFiles="REGEX[^\/fdsnws/event]"
+OnlyFiles="REGEX[^\/fdsnws/event]"
 SiteDomain="mysite.com"
 LogFile="/var/local/log/mysite-access.log"
+AllowFullYearView=3
+URLWithQuery=1
