--- a/confs/awstats_httpd.conf
+++ b/confs/awstats_httpd.conf
@@ -1,8 +1,9 @@
 User www-data
 Group www-data
 <VirtualHost *:80>
-	LoadModule cgi_module /usr/lib/apache2/modules/mod_cgi.so
-	LoadModule perl_module /usr/lib/apache2/modules/mod_perl.so
+    LoadModule cgi_module /usr/lib/apache2/modules/mod_cgi.so
+    LoadModule perl_module /usr/lib/apache2/modules/mod_perl.so
+    TimeOut 600
 
     DocumentRoot "/var/www/"
 	<Directory "/var/www/">
